Fix #5: Go back to css-only extension Life is too short to understand chrome bugs

--- a/extension/main.css
+++ b/extension/main.css
@@ -1,8 +1,7 @@
-body {
-  background: #222;
-  display: flex;
+body[style="margin: 0px;"] {
+    background-color: #222;
+    display: flex;
 }
-
-img {
-    margin: auto;
+body[style="margin: 0px;"] > img {
+    margin: auto
 }
